manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "k8sjehlar-37a6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "k8sjehlar-37a6"
  template:
    metadata:
      labels:
        app: "k8sjehlar-37a6"
    spec:
      containers:
        - name: "k8sjehlar-37a6"
          image: "jehlar.azurecr.io/k8sjehlar"
          ports:
          - containerPort: 80
